# embroidery-design-catalog

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  machine_transfer.rs  main.rs
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260710_0001_create_catalog_tables.py  20260710_0002_add_relationship_indexes.py  20260711_0002_add_desenhos_trash.py  20260711_0003_add_catalog_search_indexes.py  20260714_0004_create_showcase_tables.py  20260714_0005_add_public_showcase_access.py  20260716_0006_add_catalog_pagination_indexes.py
backend/app/: main.py
backend/app/core/: config.py  openapi.py
backend/app/db/: session.py
backend/app/models/: __init__.py  arquivo_backup.py  categoria.py  desenho.py  importacao.py  item_importacao.py  item_vitrine.py  matriz.py  origem_importacao.py  vitrine.py
backend/app/schemas/: __init__.py  categoria.py  desenho.py  importacao.py  lixeira.py  matriz.py  vitrine.py
backend/app/services/: gerenciamento_vitrine.py  importacao_lote.py  pes_processor.py  remocao_desenho.py  storage.py  vitrine.py
backend/app/tests/: test_cors.py  test_health.py  test_importacao_lote.py  test_importacoes_route.py  test_models.py  test_pes_processor.py  test_us01_pesquisa.py  test_us02_detalhes.py  test_us04_routes.py  (+8 more)
backend/scripts/: test_connections.py
(+81 files in other folders)
